<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#7597B1"
    android:backgroundTintMode="screen"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login"><![CDATA[

    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



















        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

























    ]]>

    <TextView
        android:id="@+id/cengonline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:text="@string/cengonline_text"
        android:textAlignment="center"
        android:textColor="@color/deucenglogo_background"
        android:textSize="46sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_hint_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/username_hint_text"
        android:inputType="textEmailAddress"
        android:paddingRight="5dp"
        android:textColor="#021B27"
        android:textColorHint="#021B27"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cengonline_text" />

    <EditText
        android:id="@+id/password_hint_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:textColor="#021B27"
        android:textColorHint="#021B27"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_hint_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:background="#FF9800"
        android:backgroundTint="#20FFFFFF"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_button_text"
        android:textColor="#A61345"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_hint_text"
        app:layout_constraintVertical_bias="0.148" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:textAlignment="center"
        android:tint="#84FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.736"
        app:srcCompat="@drawable/deucenglogo" />

</androidx.constraintlayout.widget.ConstraintLayout>